--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Data (may be confidential!)
+*.tsv
+
 # Logs
 logs
 *.log
@@ -17,8 +20,6 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 
-# nyc test coverage
-.nyc_output
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
