--- a/journey/package.json
+++ b/journey/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "d3": "^4.12.0"
+    "d3": "^4.12.0",
+    "json2csv": "^3.11.5"
   }
 }
